apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__custom_plugin.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.non_zero()"
---
- name: apollo.router.config.custom_plugins
  data:
    datapoints:
      - value: 1
        attributes: {}
