apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__env_metrics.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "& metrics.non_zero()"
snapshot_kind: text
---
- name: apollo.router.config.env
  data:
    datapoints:
      - value: 1
        attributes:
          opt.apollo.dev: true
          opt.apollo.graph_ref: true
          opt.apollo.key: true
          opt.apollo.license: true
          opt.apollo.license.path: true
          opt.apollo.supergraph.path: true
          opt.apollo.supergraph.urls: true
          opt.otel.semconv_stability_opt_in: unset
          opt.security.non_local_selections: true
          opt.security.recursive_selections: true
