apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__experimental_mode_metrics_2.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.non_zero()"
---
- name: apollo.router.config.experimental_query_planner_mode
  data:
    datapoints:
      - value: 1
        attributes:
          mode: new_best_effort
