apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__license_halt.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.non_zero()"
---
- name: apollo.router.license
  data:
    datapoints:
      - value: 1
        attributes:
          license.state: halt

