apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@apollo_telemetry.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.apollo_telemetry_options
  data:
    datapoints:
      - value: 1
        attributes:
          opt.errors.extended_error_metrics: enabled
          opt.field_level_instrumentation_sampler: 1
          opt.metrics.otlp.batch_processor.max_export_timeout: 103s
          opt.metrics.otlp.batch_processor.scheduled_delay: 5s
          opt.metrics.usage_reports.batch_processor.max_concurrent_exports: false
          opt.metrics.usage_reports.batch_processor.max_export_timeout: 5s
          opt.metrics.usage_reports.batch_processor.scheduled_delay: 12ms
          opt.metrics_reference_mode: false
          opt.signature_normalization_algorithm: false
          opt.tracing.batch_processor.max_concurrent_exports: 1
          opt.tracing.batch_processor.max_export_batch_size: 512
          opt.tracing.batch_processor.max_export_timeout: 30s
          opt.tracing.batch_processor.max_queue_size: 2048
          opt.tracing.batch_processor.scheduled_delay: 5s
          opt.tracing.throttle: rate_limited
- name: apollo.router.config.experimental_local_field_metrics
  data:
    datapoints:
      - value: 1
        attributes: {}
